--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <h1>B.V.K Ratnesh</h1>
     <hr />
     <h2>Summary</h2>
-    <p>Hi there, I am B.V.K Ratnesh.<br>An aspiring Web Developer and Python enthusiast.
-        I am currently studying Computer Science Engineering in CMR Institute Of Technology in Hyderabad. I have been a Tech enthusiast throughout my childhood. First, I was fascinated by smartphones and technology in general. Then, my curiosity shifted towards the backend of it which includes HOW the Technology works which paved the path for my Coding Journey.
+    <p>Hi there, I am B.V.K Ratnesh, an aspiring Web Developer and Python enthusiast.
+        I am currently studying Computer Science Engineering in CMR Institute Of Technology in Hyderabad. I have been a Tech enthusiast throughout my 
+        childhood. <br>First, I was fascinated by smartphones and technology in general. Then, my curiosity shifted towards the backend of it which includes HOW the Technology works which paved the path for my Coding Journey.
     </p>
     <hr />
     <h2>Education</h2>
