Added text to summary

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <br>At first, I was fascinated by smartphones and technology in general. Then, my 
         curiosity shifted towards the backend of it which includes HOW the Technology 
         works which paved the path for my Coding Journey. Currently, I am learning
-        different programming languages and getting 
+        different programming languages and getting used to different libraries.
+        <br>Currently I am learning Web Development, with the help of which I was able
+        to build this website.
     </p>
     <hr />
     <h2>Education</h2>
